implment nature sound

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,21 +3,21 @@
 @tailwind utilities;
 
 .rhap_container {
-flex-grow:1
+  flex-grow: 1
 }
 
 .rhap_main {
-font-size:1.5rem;
-background-color: #282828;
-padding: 0.65rem;
-border-radius:0.5rem;
+  font-size: 1.5rem;
+  background-color: #282828;
+  padding: 0.65rem;
+  border-radius: 0.5rem;
 }
 
-.rhap_progress-section{
-display: flex;
-justify-content:space-between;
-width: 100%;
-color: #CFD4D4;
+.rhap_progress-section {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  color: #CFD4D4;
 
 }
 
@@ -27,15 +27,20 @@ color: #CFD4D4;
 }
 
 .rhap_controls-section {
-color: #CFD4D4;
-display: flex;
-justify-content:space-between;
+  color: #CFD4D4;
+  display: flex;
+  justify-content: space-between;
 }
 
 .rhap_main-controls {
-display: flex;
-justify-content:space-between;
-gap:1rem;
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
 
 
+}
+
+
+::-webkit-scrollbar {
+  width: 0px;
 }
